Fix on mobile

--- a/pegasus/sites.v3/code.org/public/css/ai-styles.scss
+++ b/pegasus/sites.v3/code.org/public/css/ai-styles.scss
@@ -97,6 +97,6 @@
 }
 
 .logos-wrapper.ai-logos-wrapper {
-  display: flex;
-  flex-wrap: nowrap;
+  max-width: 950px;
+  flex-wrap: auto;
 }
